fixed alignment errors

--- a/styles/orders.css
+++ b/styles/orders.css
@@ -17,8 +17,9 @@ body {
   margin-top: 30px;
 }
 .container__left {
+  margin-top: 60px;
   max-width: 20%;
-  padding: 4% 0.5%;
+  padding: 0% 0.5%;
   margin-left: 1%;
   border: transparent;
   border-right: 1px solid #f3f3f3;
